--- a/Chinmaya/src/style/herosection.css
+++ b/Chinmaya/src/style/herosection.css
@@ -1,11 +1,58 @@
-.social-icon {
-    color: #333; /* Set default color */
-    font-size: 24px; /* Set default font size */
-    transition: all 0.3s ease-in-out; /* Add transition for smooth hover effect */
-  }
-  
-  .social-icon:hover {
-    color: #007bff; /* Change color on hover */
-    transform: translateY(-3px); /* Add slight lift effect */
-  }
-  
+/* Light Theme */
+.heading {
+  @apply justify-center flex text-2xl font-bold;
+  position: relative;
+  background: linear-gradient(90deg, #cd1515, #23668a, #6BCB77, #4D96FF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient 3s infinite;
+}
+
+.profession {
+  @apply ml-4;
+  position: relative;
+  background: linear-gradient(90deg, #32c37d, #3dffbe, #6b7bcb, #4D96FF);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradient 3s infinite;
+}
+
+.heading, .profession {
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  transition: transform 0.3s ease-in-out;
+}
+
+.heading:hover, .profession:hover {
+  transform: scale(1.1);
+}
+
+.subheading {
+  width: 70%;
+  margin: 0 auto;
+  @apply text-xl mt-4;
+  color: #e21649; /* Light theme color */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+  font-weight: bold;
+}
+
+/* Dark Theme */
+.heading-dark {
+  background: linear-gradient(90deg, #3B3B3B, #5A5A5A, #767676, #A3A3A3);
+  text-shadow: 0px 2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.profession-dark {
+  background: linear-gradient(90deg, #3B3B3B, #5A5A5A, #767676, #A3A3A3);
+  text-shadow: 0px 2px 4px rgba(255, 255, 255, 0.2);
+}
+
+.subheading-dark {
+  color: #e0e0e07b; /* Dark theme color */
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
+}
+
+@keyframes gradient {
+  0% {background-position: 0% 50%;}
+  50% {background-position: 100% 50%;}
+  100% {background-position: 0% 50%;}
+}
